Fix/Change - Tambahbaik SEO semua page. Ubah hubungi kami

--- a/partials/nav.html
+++ b/partials/nav.html
@@ -17,7 +17,7 @@
                 <li class="nav-item py-2"><a class="nav-link" href="shop.html">Kedai</a></li>
                 <li class="nav-item py-2"><a class="nav-link" href="services.html">Servis</a></li>
                 <li class="nav-item py-2"><a class="nav-link" href="komuniti.html">Komuniti</a></li>
-                <li class="nav-item py-2"><a class="nav-link" href="about.html">Siapa Saya</a></li>
+                <li class="nav-item py-2"><a class="nav-link" href="about.html">Hubungi</a></li>
             </ul>
 
             <!-- Mobile theme toggle only -->
